Make the error maven module a JPMS module.